# Plant_Disease_Detection_Model_MLOPs

./: .dockerignore  .dvcignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: ecr.yml
artifacts/training/: class_names.yaml
config/: config.yaml
research/: trials.ipynb
src/cnnClassifier/: __init__.py  logger.py
src/cnnClassifier/components/: data_ingestion.py  evaluation.py  prediction.py  prepare_base_model.py  training.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: __init__.py  prediction.py
src/cnnClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
src/cnnClassifier/utils/: common.py
templates/: index.html
tests/: test_config.py  test_notebook.py
